# sklearn-glm-extension

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
glmext/: glm.py  loss.py
glmext/_C/: _loss.pxd  _loss.pyx
notebooks/: Example.ipynb  Validation.ipynb
