[metadata]
name = glmext
version = 1.0.0
author = Yunchen Yang
description = Generalized Linear Model Extension for Scikit-Learn.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires >= 3.8
install_requires =
    numpy >= 1.22.1
    scikit-learn >= 1.4, <= 1.8

[options.extras_require]
dev =
    jupyter
    statsmodels
    matplotlib